day1-frontend-part

--- a/Frontend_Part/index.html
+++ b/Frontend_Part/index.html
@@ -21,7 +21,7 @@
             <!-- <a href="#home"> <img id="logo"  src="./Images/logo.avif" alt=""></a> -->
             <a href="Login/adminLogin.html">Admin Login</a >
             <a href="Login/operatorLogin.html">Operator Login</a >
-                <a href="Login/consumerLogin.html">Consumer Login</a >
+            <a href="Login/consumerLogin.html">Consumer Login</a >
         </nav>    
                
          <!-- <li><button id="resume-button-1" onclick="resume()"><a id="resume-link-1" class="nav-link resume" href="./Image/Suryakant-Singh-Resume.pdf" download="Suryakant_Singh_Resume" target="_blank">Resume</a></button></li>
@@ -38,6 +38,7 @@
             <a href="Login/adminLogin.html"><button>Login Admin</button></a>
             <a href="Login/operatorLogin.html"><button>Login Operator</button></a>
             <a href="Login/consumerLogin.html"><button>Login Consumer</button></a>
+            <a href="./Registration/consumerSignup.html"><button>Register Consumer</button></a>
         </div>
     </div>
 
