Day2 task completed

--- a/Frontend_Part/ForgotPassword/forgotPassword.html
+++ b/Frontend_Part/ForgotPassword/forgotPassword.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="consumerLogin.css">
-    <title>OperatorLogin</title>
+    <link rel="stylesheet" href="./forgotPassword.css">
+    <title>Forget Password</title>
 </head>
 <body>
     <!-- navbar -->
@@ -33,20 +33,24 @@
     <!-- Menu -->
     <div id="menu" class="menu">
         <div>
-            <h2>Consumer's Login Credentials</h2>
+            <h2>Security Credentials :</h2>
         </div>
         <div>
             <form action="#">
-                <label for="email">Email<span>*</span> :</label>
-                <input id="email" type="email" placeholder="Enter Email">
-                <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password">
-                <label for="userType">User Type<span>*</span> :</label>
-                <select name="userType" id="userType" required>
-                    <option value="consumer" selected>Consumer</option>
+                <label for="sq">Security Question<span>*</span> :</label>
+                <select name="securityQuestion" id="sq" required>
+                    <option value="">--Select Security Question--</option>
+                    <option value="what is your favourite sport">What is your favourite sport?</option>
+                    <option value="what is your favourite food">What is your favourite food?</option>
+                    <option value="what is your school name">What is your school name?</option>
+                    <option value="what is your pet name">What is your pet name?</option>
+                    <option value="what is your favourite colour">What is your favourite colour?</option>
+                    <option value="who is your role model">Who is your role model?</option>
                 </select>
+                <label for="sa">Security Answer<span>*</span> :</label>
+                <input id="sa" type="text" placeholder="Enter Security Answer" > 
             </form>
-            <a href="../RoleOfUsers/consumerRole.html"><button>Login</button></a>
+            <a href="#"><button>Forget Password</button></a>
         </div>
     </div>
 
