--- a/Frontend_Part/Registration/consumerSignup.html
+++ b/Frontend_Part/Registration/consumerSignup.html
@@ -33,24 +33,22 @@
     <!-- Menu -->
     <div id="menu" class="menu">
         <div>
-            <h2>Consumer's Registration Credentials</h2>
+            <h2>Enter Consumer's Details :</h2>
         </div>
         <div>
             <form action="#">
+                <label for="fName">First Name<span>*</span> :</label>
+                <input id="fName" type="text" placeholder="Enter First Name" >
+                <label for="lName">Last Name<span>*</span> :</label>
+                <input id="lName" type="text" placeholder="Enter Last Name" >
                 <label for="email">Email<span>*</span> :</label>
-                <input id="email" type="email" placeholder="Enter Email">
-                <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password">
-                <label for="email">Email<span>*</span> :</label>
-                <input id="email" type="email" placeholder="Enter Email">
-                <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password">
-                <label for="email">Email<span>*</span> :</label>
-                <input id="email" type="email" placeholder="Enter Email">
-                <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password">
-                <button>Submit</button>
+                <input id="email" type="email" placeholder="Enter Email" >
+                <label for="mobile">Moblie No<span>*</span> :</label>
+                <input id="mobile" type="number" placeholder="Enter Mobile Number" >
+                <label for="city">City<span>*</span> :</label>
+                <input id="city" type="text" placeholder="Enter City" >
             </form>
+            <a href="#"><button>Register</button></a>
         </div>
     </div>
 
