--- a/Frontend_Part/Login/operatorLogin.html
+++ b/Frontend_Part/Login/operatorLogin.html
@@ -40,7 +40,12 @@
                 <input id="email" type="email" placeholder="Enter Email">
                 <label for="email">Password<span>*</span> :</label>
                 <input id="password" type="password" placeholder="Enter Password">
+                <label for="userType">User Type<span>*</span> :</label>
+                <select name="userType" id="userType" required>
+                    <option value="operator" selected>Operator</option>
+                </select>
             </form>
+            <a href="../RoleOfUsers/operatorRole.html"><button>Login</button></a>
         </div>
     </div>
 
