--- a/Frontend_Part/RoleOfUsers/ActionsOfAdmin/modifyOperator.html
+++ b/Frontend_Part/RoleOfUsers/ActionsOfAdmin/modifyOperator.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="consumerLogin.css">
-    <title>OperatorLogin</title>
+    <link rel="stylesheet" href="./addDepartment.css">
+    <title>ModifyOperator</title>
 </head>
 <body>
     <!-- navbar -->
     <div id="nav-menu" >
         <div class="project_logo">
-            <img src="../Images/Customer Support2.png" alt="">
+            <img src="../../Images/Customer Support2.png" alt="">
             <h1>SUPPORT CENTER</h1>
         </div>
            
@@ -31,22 +31,27 @@
     </div>
 
     <!-- Menu -->
+    
     <div id="menu" class="menu">
         <div>
-            <h2>Consumer's Login Credentials</h2>
+            <h2>Enter Operator Details :</h2>
         </div>
         <div>
             <form action="#">
+                <label for="Id">Operator's Id<span>*</span> :</label>
+                <input id="Id" type="text" placeholder="Enter Operator's Id" >
+                <label for="fName">First Name<span>*</span> :</label>
+                <input id="fName" type="text" placeholder="Enter First Name" >
+                <label for="lName">Last Name<span>*</span> :</label>
+                <input id="lName" type="text" placeholder="Enter Last Name" >
                 <label for="email">Email<span>*</span> :</label>
-                <input id="email" type="email" placeholder="Enter Email">
-                <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password">
-                <label for="userType">User Type<span>*</span> :</label>
-                <select name="userType" id="userType" required>
-                    <option value="consumer" selected>Consumer</option>
-                </select>
+                <input id="email" type="email" placeholder="Enter Email" >
+                <label for="mobile">Moblie No<span>*</span> :</label>
+                <input id="mobile" type="number" placeholder="Enter Mobile Number" >
+                <label for="city">City<span>*</span> :</label>
+                <input id="city" type="text" placeholder="Enter City" >
             </form>
-            <a href="../RoleOfUsers/consumerRole.html"><button>Login</button></a>
+            <a href="#"><button>Modify</button></a>
         </div>
     </div>
 
