--- a/Frontend_Part/RoleOfUsers/ActionsOfConsumer/changePassword.html
+++ b/Frontend_Part/RoleOfUsers/ActionsOfConsumer/changePassword.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="consumerLogin.css">
-    <title>OperatorLogin</title>
+    <link rel="stylesheet" href="./changePassword.css">
+    <title>Change Password</title>
 </head>
 <body>
     <!-- navbar -->
     <div id="nav-menu" >
         <div class="project_logo">
-            <img src="../Images/Customer Support2.png" alt="">
+            <img src="../../Images/Customer Support2.png" alt="">
             <h1>SUPPORT CENTER</h1>
         </div>
            
@@ -31,22 +31,21 @@
     </div>
 
     <!-- Menu -->
+    
     <div id="menu" class="menu">
         <div>
-            <h2>Consumer's Login Credentials</h2>
+            <h2>Enter Password Details :</h2>
         </div>
         <div>
             <form action="#">
-                <label for="email">Email<span>*</span> :</label>
-                <input id="email" type="email" placeholder="Enter Email">
-                <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password">
-                <label for="userType">User Type<span>*</span> :</label>
-                <select name="userType" id="userType" required>
-                    <option value="consumer" selected>Consumer</option>
-                </select>
+                <label for="oldPassword">Confirm Old Password<span>*</span> :</label>
+                <input id="oldPassword" type="text" placeholder="Enter Old Password" required>
+                <label for="newPassword">New Password<span>*</span> :</label>
+                <input id="newPassword" type="text" placeholder="Enter New Password" required>
+                <label for="cNewPassword">Confirm New Password<span>*</span> :</label>
+                <input id="cNewPassword" type="text" placeholder="Confirm New Password" required>
             </form>
-            <a href="../RoleOfUsers/consumerRole.html"><button>Login</button></a>
+            <a href="#"><button>Change</button></a>
         </div>
     </div>
 
