--- a/Frontend_Part/RoleOfUsers/ActionsOfOpeartor/modifyCustomerIssue.html
+++ b/Frontend_Part/RoleOfUsers/ActionsOfOpeartor/modifyCustomerIssue.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="consumerLogin.css">
-    <title>OperatorLogin</title>
+    <link rel="stylesheet" href="./modifyCustomerIssue.css">
+    <title>ModifyCustomerIssue</title>
 </head>
 <body>
     <!-- navbar -->
     <div id="nav-menu" >
         <div class="project_logo">
-            <img src="../Images/Customer Support2.png" alt="">
+            <img src="../../Images/Customer Support2.png" alt="">
             <h1>SUPPORT CENTER</h1>
         </div>
            
@@ -31,22 +31,25 @@
     </div>
 
     <!-- Menu -->
+    
     <div id="menu" class="menu">
         <div>
-            <h2>Consumer's Login Credentials</h2>
+            <h2>Enter Issue Details :</h2>
         </div>
         <div>
             <form action="#">
-                <label for="email">Email<span>*</span> :</label>
-                <input id="email" type="email" placeholder="Enter Email">
-                <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password">
-                <label for="userType">User Type<span>*</span> :</label>
-                <select name="userType" id="userType" required>
-                    <option value="consumer" selected>Consumer</option>
-                </select>
+                <label for="issueType">Issue Type<span>*</span> :</label>
+                <input id="issueType" type="text" placeholder="Enter Issue Type" required>
+                <label for="issueDesc">Issue Description<span>*</span> :</label>
+                <input id="issueDesc" type="text" placeholder="Enter Issue Description" required>
+                <label for="issueStatus">Issue Status<span>*</span> :</label>
+                <select name="status" id="issueStatus" required>
+                    <option value="">--Select Status--</option>
+                    <option value="pending">Pending</option>
+                    <option value="closed">Closed</option>
+                </select>  
             </form>
-            <a href="../RoleOfUsers/consumerRole.html"><button>Login</button></a>
+            <a href="#"><button>Modify</button></a>
         </div>
     </div>
 
