--- a/Frontend_Part/Login/adminLogin.html
+++ b/Frontend_Part/Login/adminLogin.html
@@ -40,15 +40,47 @@
                 <label for="email">Email<span>*</span> :</label>
                 <input id="email" type="email" placeholder="Enter Email" required>
                 <label for="email">Password<span>*</span> :</label>
-                <input id="password" type="password" placeholder="Enter Password" >
+                <input id="password" type="password" placeholder="Enter Password" required>
                 <label for="userType">User Type<span>*</span> :</label>
                 <select name="userType" id="userType" required>
                     <option value="admin" selected>Admin</option>
                 </select> 
             </form>
-            <a href="../RoleOfUsers/adminRole.html"><button>Login</button></a>
+            <a href="#"><button id="login">Login</button></a>
         </div>
     </div>
 
 </body>
+<script>
+
+    let loginBtn=document.getElementById("login");
+    loginBtn.addEventListener("click",function(event){
+        event.preventDefault();
+        let email=document.getElementById("email").value;
+        let password=document.getElementById("password").value;
+
+        if(email!=="" && password!=""){
+            if(email=="admin@gmail.com" && password=="admin"){
+            alert("***Admin Logged In successfully***")
+            openPage("../RoleOfUsers/adminRole.html");
+           }
+           else{
+               alert("--Invalid email or password--")
+            }
+        }
+        else{
+            alert("Input boxes are mandatory")
+        }
+    })
+
+
+    function openPage(url) {
+      window.open(url, "_blank");
+    }
+
+
+// Call the function with the desired URL
+
+
+</script>
 </html>
