--- a/Frontend_Part/RoleOfUsers/operatorRole.html
+++ b/Frontend_Part/RoleOfUsers/operatorRole.html
@@ -38,6 +38,7 @@
             <a href="./ActionsOfOpeartor/findCustById.html"><button>Find Customer By Id</button></a>
             <a href="./ActionsOfOpeartor/findCustByName.html"><button>Find Customer By Name</button></a>
             <a href="./ActionsOfOpeartor/findCustByEmail.html"><button>Find Customer By Email</button></a>
+            <a href="./ActionsOfOpeartor/findAllCustomers.html"><button>Find All Customers</button></a>
             <a href="./ActionsOfOpeartor/lockCustomer.html"><button>Lock Customer</button></a>
         </div>
     </div>
