--- a/Frontend_Part/RoleOfUsers/ActionsOfAdmin/addDepartment.html
+++ b/Frontend_Part/RoleOfUsers/ActionsOfAdmin/addDepartment.html
@@ -103,8 +103,8 @@
         `
         res_div.innerHTML+=`
               <div class="card">
-                <h3>CustomerId : ${data.deptId}</h3>
-                <h3>CustomerName : ${data.deptName}</h3>
+                <h3>DepartmentId : ${data.deptId}</h3>
+                <h3>DepartmentName : ${data.deptName}</h3>
               </div>  
             `
     };
