--- a/Frontend_Part/RoleOfUsers/ActionsOfAdmin/removeDepartment.html
+++ b/Frontend_Part/RoleOfUsers/ActionsOfAdmin/removeDepartment.html
@@ -64,7 +64,7 @@
 
 
     if(deptId!==0){
-        fetch(`http://localhost:8080/depart/delete/${deptId}/${"ADMIN"}`,{
+        fetch(`http://localhost:8080/depart/delete/${deptId}`,{
             method:'DELETE',
             headers:{
                 'Content-Type': 'application/json'
