--- a/Frontend_Part/RoleOfUsers/adminRole.html
+++ b/Frontend_Part/RoleOfUsers/adminRole.html
@@ -40,7 +40,7 @@
             <a href="./ActionsOfAdmin/removeOperator.html"><button>Remove Operator</button></a>
             <a href="./ActionsOfAdmin/modifyOperator.html"><button>Modify Operator</button></a>
             <a href="./ActionsOfAdmin/findOperatorById.html"><button>Find Operator By Id</button></a>
-            <a href="#"><button>Find All Operators</button></a>
+            <a href="./ActionsOfAdmin/findAllOperators.html"><button>Find All Operators</button></a>
         </div>
     </div>
     <br>
